projeto-02-docker-nginx/k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: react-nginx
  namespace: app
spec:
  parentRefs:
  - name: react-nginx-gateway
  hostnames:
  - "app.local"
  rules:
  - backendRefs:
    - name: react-nginx-service
      port: 80
